--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "type": "module",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
     "nodemon": "^3.1.10",
+    "rate-limiter-flexible": "^8.2.0",
     "validator": "^13.15.20"
   },
   "scripts": {
